mi primer confirmacion de actualizacion

--- a/primer paso/about.html
+++ b/primer paso/about.html
@@ -24,7 +24,10 @@
         <img src="img/1.jpg" alt="Descripción de la imagen 1 Cachorro" />
         <img src="img/2.jpg" alt="Descripción de la imagen 2 Joven" />
         <img src="img/3.jpg" alt="Descripción de la imagen 3 Adulto" />
-    </div>        
+    </div> 
+    <div class="container greeting">
+      <h3>Gracias por su visita</h3>
+    </div>       
     <script src="script.js"></script> 
   </body>
 </html>
